// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderToDot render edge 1`] = `
digraph {
  "a" -> "b";
}
`;

exports[`renderToDot render subgraph 1`] = `
digraph {
  subgraph {
    "a" -> "b";
  }
}
`;

exports[`renderToDot render works 1`] = `
digraph {
  "a";
  "b";
}
`;
